Fixes #16847.  Add border-collapse css to work around jsfiddle css overrides.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@30963 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -81,6 +81,7 @@ table.dijitInline {
 }
 TABLE.dijitSelect {
 	padding: 0 !important; /* messes up border alignment */
+	border-collapse: separate; /* so jsfiddle works with Normalized CSS checked */
 }
 .dijitTextBox .dijitSpinnerButtonContainer,
 .dijitTextBox .dijitArrowButtonContainer,
